game page styled

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -5,14 +5,37 @@ body {
 h1,h2,h3,h4,h5,h6,p {
  line-height: 1.45;
 }
+
 h1 {
-  font-size: 36px;
+  font-size: 48px;
+  font-family: remained;
+  color: $green;
+ }
+
+h2 {
+  font-size: 48px;
   font-family: Remained;
   color: $green;
  }
 
- h2 {
-   font-size: 24px;
+ h3 {
+   font-size: 36px;
    font-family: remained;
    color: $green;
   }
+
+  h4 {
+    font-size: 36px;
+    font-family: silom;
+    color: white;
+   }
+
+p {
+  font-size: 20px;
+  font-family: silom;
+  color: white;
+}
+
+.white-font {
+  color: white;
+}
