--- a/scss/components/_game.scss
+++ b/scss/components/_game.scss
@@ -11,9 +11,12 @@ body, .game-page {
   padding: 10px 20px;
 }
 
-.game-content {
-  height: 500px;
+.game-board-container {
+  width: 100%;
+  padding:0px;
+  margin: 0px;
 }
+
 
 .title {
   width: 90%;
@@ -44,4 +47,31 @@ body, .game-page {
 
 .action-buttons {
   margin-top: 50px;
+}
+
+// ********************************
+// CARDS********************************
+// ********************************
+
+#game-board {
+  height: 500px;
+  width:90%;
+  background-color: white;
+  margin: 0px auto;
+  box-sizing: border-box;
+}
+
+.tile .back {
+  background-color: $dark-pink;
+  width: 15%;
+  height: 1.5em;
+  float: left;
+  margin: 20px 0px 0px 1.5%;
+	padding:0px;
+	font-size:64px;
+  box-sizing: border-box;
+}
+.tile .front.blocked,
+.tile .back.blocked {
+  pointer-events: none;
 }
