--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -9,19 +9,19 @@ h1,h2,h3,h4,h5,h6,p {
 h1 {
   font-size: 48px;
   font-family: remained;
-  color: $green;
+  color: $dark-green;
  }
 
 h2 {
   font-size: 48px;
   font-family: Remained;
-  color: $green;
+  color: $dark-green;
  }
 
  h3 {
    font-size: 36px;
    font-family: remained;
-   color: $green;
+   color: $dark-green;
   }
 
   h4 {
@@ -29,6 +29,12 @@ h2 {
     font-family: silom;
     color: white;
    }
+
+   h5 {
+     font-size: 36px;
+     font-family: silom;
+     color: white;
+    }
 
 p {
   font-size: 20px;
